<resources>
    <string name="app_name">Countdown App</string>
    <string name="name_of_event">Name of Event</string>
    <string name="isShowDayString">true</string>
    <string name="isShowHourString">true</string>
    <string name="isShowMinuteString">true</string>
    <string name="isShowSecondsString">true</string>
    <string name="isShowMillieSecString">false</string>
    <string name="nav_open">Nav drawer open</string>
    <string name="nav_drawer_closed">Nav drawer closed</string>
    <string name="first_instructions">To create a new countdown, tap the edit button in the bottom right from the homescreen.</string>
    <string name="seconds_instructions">When editing your countdown you can set a name, this will show on the mainscreen to allow you to indetify your countdown. \n \nYou can either select a local date or pick a public holiday provided by Gov.UK. \n \nPressing save will return you back to the countdown view. </string>
    <string name="third_instructions">Selecting \'Local Date Selection\' will allow you to select a date from a dialog, selecting a date will start a countdown from a the current date to your chosen date.</string>
    <string name="name_of_countdown_hint">Name of Countdown</string>
    <string name="no_countdown">No Countdown entered\n\nPlease press edit in the bottom right to create a countdown. </string>
    <string name="material_edit_countdown_textbox">Edit Countdown</string>
    <string name="date_selection_text">Date Selection</string>
    <string name="local_date_selection_button">Local Date Selection</string>
    <string name="view_public_holiday_button">View Public Holiday\'s (UK)</string>
    <string name="save_button">Save</string>
    <string name="edit_countdown_timer_description">Edit countdown timer</string>
    <string name="counting_down_till_mainpage_nochange">Counting down till</string>
    <string name="default_error_message_holidays">Cant fetch public holidays, check your internet connection.</string>
    <string name="loading_holidays_text">Fetching public holidays from GOV.UK</string>
    <string name="how_to_use_text">How to Use</string>
    <string name="homescreen">Homescreen</string>
    <string name="edit_countdown_screen_string">Edit Countdown Screen</string>
    <string name="date_selection_text_howto">Local Date Selection</string>
    <string name="top_bar_text">Countdown App - Navigation</string>
    <string name="public_holidays_howto_text">Public Holiday Selection</string>
    <string name="fourth_instructions">Using the GOV.UK Public Web API, a list of current UK holidays will appear on the screen\n\nLong pressing on one of these dates will copy the event selected to the clipboard, allowing you to enter it into the event name on the Edit Countdown screen.</string>
</resources>