<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditCountdownFragment"
    android:id="@+id/CountdownEditorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp" >

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/material_edit_countdown_textbox"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_countdown_hint" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/countDownNameEditBox"
        />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/date_selection_text"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local_date_selection_button"
        android:id="@+id/buttonDatePicker"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_public_holiday_button"
        android:id="@+id/buttonAPIHoliday"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/countdownEditSaveBUtton"
        android:text="@string/save_button"
        android:textSize="22sp"
        />

    </LinearLayout>

</RelativeLayout>